--- a/brisa/style.css
+++ b/brisa/style.css
@@ -95,12 +95,12 @@ body {
 
     padding-left: 8px;
     padding-right: 8px;
-    border: 1px #fdb503 solid;
     margin: 20px;
     padding: 10px;
     border-radius: 8px;
-    height: 90px;
-    background-color:#fe7247 ;
+    height: 300px;
+    border: 3px red;
+    width: 220px;
 }
 /*End of cards*/
 
@@ -172,3 +172,41 @@ body {
 }
 
 /*End of gridview*/
+
+/* login boxes*/
+.login_geral {
+  width: fit-content;
+  padding: 10px;
+  height: fit-content;
+  margin: 10px;
+  position:relative;
+  background-color: burlywood;
+  border-radius: 20px;
+  border: 2px solid burlywood;
+}
+
+.error{
+  color: red;
+  font-size: 12;
+  text-align: center;
+}
+
+/*end of login boxes*/
+
+/* index images*/
+
+.hotel{
+  width: 100%;
+  border-radius: 20%;
+  width: 400px;
+  height: 250px;
+}
+
+
+#hotel1:hover{
+  
+}
+
+
+/* end of index images*/
+
