--- a/brisa/style.css
+++ b/brisa/style.css
@@ -90,7 +90,6 @@ body {
 }
 
 .cards__item {
-    /* There will be 4 cards per row */
     flex-basis: 25%;
 
     padding-left: 8px;
@@ -98,9 +97,8 @@ body {
     margin: 20px;
     padding: 10px;
     border-radius: 8px;
-    height: 300px;
-    border: 3px red;
-    width: 220px;
+    height: fit-content;
+    width: fit-content;
 }
 /*End of cards*/
 
@@ -114,7 +112,7 @@ body {
   right: 120px;
   text-align: center;
   padding-top: 10px;
-  border-radius:8px;
+  border-radius: 8px;
 }
 
 #login-button a {
@@ -196,7 +194,6 @@ body {
 /* index images*/
 
 .hotel{
-  width: 100%;
   border-radius: 20%;
   width: 400px;
   height: 250px;
@@ -210,3 +207,9 @@ body {
 
 /* end of index images*/
 
+/* Footer */
+.footer{
+  background-color: #efef62;
+  align-items: center;
+  width: 100%;
+}
