--- a/brisa/style.css
+++ b/brisa/style.css
@@ -2,19 +2,26 @@
   box-sizing: border-box;
 }
 
-/*pallete
- * #efef62
- * #cbd03e
- * #fdb503
- * #fe7247
-
 /* Style the header */
 .header {
-  background-color: #efef62;
+  background-color: #f3d5b2;
   padding: 20px;
   text-align: center;
   height: 150px;
+  position: static;
 }
+
+/* Footer */
+.footer{
+  background-color: #f3d5b2;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  margin-bottom: 0px;
+  width: 100%;
+  position:fixed;
+}
+
 /* Create three unequal columns that floats next to each other */
 .column {
   float: left;
@@ -30,9 +37,8 @@
 }
 
 body {
-  margin: 0;
   font-family: Arial, Helvetica, sans-serif;
-  background-color: #fafffa;
+  background-color: #eee2cc;
 }
 
 /* Style the side navigation */
@@ -47,7 +53,6 @@ body {
   background-color: #fe7247;
   overflow-x: hidden;
 }
-
 
 /* Side navigation links */
 .sidenav a {
@@ -70,37 +75,33 @@ body {
 }
 
 /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
+@media screen and (min-width: 768px) {
   .column.side, .column.middle {
     width: 100%;
   }
 }
 
-
-
 /* Flex cards*/
 .cards {
     display: flex;
-
     /* Put a card in the next row when previous cards take all width */
     flex-wrap: wrap;
-
     margin-left: -8px;
     margin-right: -8px;
 }
 
 .cards__item {
-    flex-basis: 25%;
-
-    padding-left: 8px;
-    padding-right: 8px;
-    margin: 20px;
-    padding: 10px;
-    border-radius: 8px;
-    height: fit-content;
-    width: fit-content;
-    padding: 10px;
-    box-shadow: 1px 2px #cfcfcf;
+  flex-basis: 25%;
+  padding-left: 8px;
+  padding-right: 8px;
+  margin: 20px;
+  padding: 10px;
+  border-radius: 8px;
+  height: fit-content;
+  width: fit-content;
+  padding: 10px;
+  box-shadow: 1px 2px #cfcfcf;
+  background-color:#f0c49b;
 }
 /*End of cards*/
 
@@ -110,11 +111,12 @@ body {
   height:40px;
   position:absolute;
   top: 150px;
-  background-color: #fdb503;
+  background-color: #C5860F;
   right: 120px;
   text-align: center;
   padding-top: 10px;
   border-radius: 8px;
+  margin-top: 10px;
 }
 
 #login-button a {
@@ -122,21 +124,9 @@ body {
   text-decoration: none;
   display: block;
 }
-
-#login-button a:hover {
-  width: 100%;
-  height: 100%;
-}
-
-
 /*End of login button*/
 
-/* Filter parameteres */
-/*
-#filter{
-  
-}
-*/
+
 .filter_item {
   margin-left:30px;
 }
@@ -145,22 +135,18 @@ body {
 {
   height: 25px;
 }
-
 /* End of filter parameters*/
 
 
 /* Gridview? */
-
 .gv-header {
-    /* Background color */
-    background-color: #fdb503;
-
-    /* Stick to the top */
-    position: sticky;
-    top: 0;
-
-    /* Displayed on top of other rows when scrolling */
-    z-index: 9999;
+/* Background color */
+  background-color: #fdb503;
+  /* Stick to the top */
+  position: sticky;
+  top: 0;
+  /* Displayed on top of other rows when scrolling */
+  z-index: 9999;
 }
 
 .gv-col{
@@ -170,7 +156,6 @@ body {
 .gv tr:nth-child(even) {
   background-color: #efef62;
 }
-
 /*End of gridview*/
 
 /* login boxes*/
@@ -194,13 +179,11 @@ body {
 /*end of login boxes*/
 
 /* index images*/
-
 .hotel{
   border-radius: 20%;
   width: 400px;
   height: 250px;
 }
-
 
 
 .tab-2itens{
@@ -213,7 +196,7 @@ body {
   margin: 20px;
   margin-top: 0px;
   background-color: rgb(224, 224, 183);
-  border-radius: 20%;
+  border-radius: 8px;
   text-align: center;
 }
 
@@ -221,19 +204,11 @@ body {
   width: fit-content;
   padding: 10px;
   font-size:large;
-  
   background-color: rgb(224, 224, 183);
-  border-radius: 50%;
   text-align: center;
+  border-radius: 8px;
+  align-self: center;
 }
 
-	/* Footer */
-  .footer{
-  background-color: #efef62;
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-}
 /* end of index images*/
 
