--- a/T2/templates/index.html
+++ b/T2/templates/index.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base_index.html' %}
 
 
 {% block content %}
@@ -9,21 +9,61 @@
     <div id="login-button">
         <a href="{{ url_for ('login')}}">Login</a>
     </div>
-    <div id="filter">
-        <form action="" method="POST">
+    <div >
             <label class="filter_item">Cidade:</label>
-            <input type="text" name="cidade">
+            <input type="text" id="cidade" onkeyup="myFunction()" placeholder="Cidade...">
             <label class="filter_item">Data de checkin:</label>
-            <input type="date" class="filter_date"name="inicio" id="inicio">
+            <input type="date" id="data_inicio" class="filter_date" onchange="myFunction()" >
             <label class="filter_item">Data de checkout:</label>
-            <input type="date" class="filter_date"name="fim" id="fim">
-            <input type="submit" value="filtrar">
-        </form>
+            <input type="date" id="data_final" class="filter_date" 	onchange ="myFunction()">
     </div>
     <div class="cards">
-       
-
+        <div class="cards__item" id = "hotel3" > <img src="{{url_for('static', filename='img/pousada-santa-rita.jpg')}}" alt="" class = "hotel" ><a href="https://www.hurb.com/br/hotels/ribeirao-preto/pousada-santa-rita-JNP-JP626275?cmp=396312&prm=515&gclid=Cj0KCQjwwLKFBhDPARIsAPzPi-KhbV1YgtLvjiCJYKuYArYerkEQEPSG9-6WP-5KGDlpNu31r6P2YgwaAtaaEALw_wcB/"> <p>Pousada Santa Rita</p></a> <p class= "nomes data"> Ribeirão Preto</p> <p class="data">15/05/2021 a 15/06/2021</p><br>
+        <div class="tab-2itens">
+        <div class="tab2">
+        <p>Diaria a vista </p> <p>R$ 209,90 </p>
+        </div>
+        <div class="tab2">
+        <p>Diaria parcelada </p> <p>R$ 229,90 </p>
+        </div>
+        </div>
+        </div><div class="cards__item" id = "hotel3" > <img src="{{url_for('static', filename='img/78530860.jpg')}}" alt="" class = "hotel" ><a href="https://www.hoteis.com/ho546739/hotel-pousada-shangri-la-serra-negra-brasil/?q-rooms=1&q-room-0-adults=2&q-room-0-children=0"> <p>Pousada Shangrila</p></a> <p class="data">02/06/2021 a 17/06/2021</p><br>
+        <div class="tab-2itens">
+        <div class="tab2">
+        <p>Diaria a vista </p> <p>R$ 209,90 </p>
+        </div>
+        <div class="tab2">
+        <p>Diaria parcelada </p> <p>R$ 229,90 </p>
+        </div>
+        </div>
+        </div><div class="cards__item" id = "hotel3" > <img src="{{url_for('static', filename='img/Pousada-Maresias.jpg')}}" alt="" class = "hotel" ><a href="https://www.maresiasbeiramar.com.br/"> <p>Pousada-Maresias</p></a> <p class="data">21/05/2021 a 23/05/2021</p><br>
+        <div class="tab-2itens">
+        <div class="tab2">
+        <p>Diaria a vista </p> <p>R$ 209,90 </p>
+        </div>
+        <div class="tab2">
+        <p>Diaria parcelada </p> <p>R$ 229,90 </p>
+        </div>
+        </div>
+        </div><div class="cards__item" id = "hotel3" > <img src="{{url_for('static', filename='img/pousada-caicara.jpg')}}" alt="" class = "hotel" ><a href="http://www.caicarapousada.com.br/"> <p>Pousada Caicara</p></a> <p class="data">29/05/2021 a 05/07/2021</p><br>
+        <div class="tab-2itens">
+        <div class="tab2">
+        <p>Diaria a vista </p> <p>R$ 209,90 </p>
+        </div>
+        <div class="tab2">
+        <p>Diaria parcelada </p> <p>R$ 229,90 </p>
+        </div>
+        </div>
+        </div><div class="cards__item" id = "hotel3" > <img src="{{url_for('static', filename='img/WEB-PousadaVivamar-166-e1567982987303.jpg')}}" alt="" class = "hotel" ><a href="https://pousadavivamar.com.br/"> <p>Pousada Vivamar</p></a> <p class="data">15/07/2021 a 19/07/2021</p><br>
+        <div class="tab-2itens">
+        <div class="tab2">
+        <p>Diaria a vista </p> <p>R$ 209,90 </p>
+        </div>
+        <div class="tab2">
+        <p>Diaria parcelada </p> <p>R$ 229,90 </p>
+        </div>
+        </div>
+        </div>
     </div>
-</div>
 
 {% endblock %}
