--- a/T2/templates/index.html
+++ b/T2/templates/index.html
@@ -18,7 +18,7 @@
             <input type="date" id="data_final" class="filter_date" 	onchange ="myFunction()">
     </div>
     <div class="cards">
-        <div class="cards__item" id = "hotel3" > <img src="{{url_for('static', filename='img/pousada-santa-rita.jpg')}}" alt="" class = "hotel" ><a href="https://www.hurb.com/br/hotels/ribeirao-preto/pousada-santa-rita-JNP-JP626275?cmp=396312&prm=515&gclid=Cj0KCQjwwLKFBhDPARIsAPzPi-KhbV1YgtLvjiCJYKuYArYerkEQEPSG9-6WP-5KGDlpNu31r6P2YgwaAtaaEALw_wcB/"> <p>Pousada Santa Rita</p></a> <p class= "nomes data"> Ribeirão Preto</p> <p class="data">15/05/2021 a 15/06/2021</p><br>
+        <div class="cards__item" id = "hotel3" > <img src="{{url_for('static', filename='img/pousada-santa-rita.jpg')}}" alt="" class = "hotel" ><a href="https://www.hurb.com/br/hotels/ribeirao-preto/pousada-santa-rita-JNP-JP626275?cmp=396312&prm=515&gclid=Cj0KCQjwwLKFBhDPARIsAPzPi-KhbV1YgtLvjiCJYKuYArYerkEQEPSG9-6WP-5KGDlpNu31r6P2YgwaAtaaEALw_wcB/"> <p>Pousada Santa Rita</p></a> <p class="data">15/05/2021 a 15/06/2021</p><br>
         <div class="tab-2itens">
         <div class="tab2">
         <p>Diaria a vista </p> <p>R$ 209,90 </p>
