--- a/T2/templates/index.html
+++ b/T2/templates/index.html
@@ -2,9 +2,8 @@
 
 
 {% block content %}
-    <h1>{% block title %} DiFerias {% endblock %}</h1>
 
-    <div class="content">
+<div class="content">
   <h2>Bem vindo</h2>
     <div id="login-button">
         <a href="{{ url_for ('login')}}">Login</a>
@@ -16,6 +15,7 @@
             <input type="date" id="data_inicio" class="filter_date" onchange="myFunction()" >
             <label class="filter_item">Data de checkout:</label>
             <input type="date" id="data_final" class="filter_date" 	onchange ="myFunction()">
+            <button onclick= clearFilter() >Limpar</button>
     </div>
     <div class="cards">
         <div class="cards__item" id = "hotel3" > <img src="{{url_for('static', filename='img/pousada-santa-rita.jpg')}}" alt="" class = "hotel" ><a href="https://www.hurb.com/br/hotels/ribeirao-preto/pousada-santa-rita-JNP-JP626275?cmp=396312&prm=515&gclid=Cj0KCQjwwLKFBhDPARIsAPzPi-KhbV1YgtLvjiCJYKuYArYerkEQEPSG9-6WP-5KGDlpNu31r6P2YgwaAtaaEALw_wcB/"> <p>Pousada Santa Rita</p></a> <p class="data">15/05/2021 a 15/06/2021</p><br>
@@ -65,5 +65,5 @@
         </div>
         </div>
     </div>
-
+</div>
 {% endblock %}
