--- a/T2/templates/login.html
+++ b/T2/templates/login.html
@@ -12,7 +12,7 @@
 
 <div class="content">
   <h2>Login</h2>
-      <form action="" method="POST" class= "login_geral">
+      <form action="{{ url_for ('login')}}" method="POST" class= "login_geral">
       <table>
       <tr>
         <th><label>Login: </label></th>
@@ -34,6 +34,7 @@
       </tr>
       </table>
       </form>
+      <h1>{{ success }}</h1>
 </div>
 
 
