--- a/T2/templates/login.html
+++ b/T2/templates/login.html
@@ -16,14 +16,14 @@
       <table>
       <tr>
         <th><label>Login: </label></th>
-        <th><input type="text" name="login"></th>
+        <th><input type="text" name="login" width="100%"></th>
       </tr>
       <tr>
         <th><span class="error"> </span></th>
       </tr>
       <tr>
         <th><label>Senha: </label></th>
-        <th><input type="password" name="password"></th>
+        <th><input type="password" name="password" width="100%"></th>
       </tr>
       <tr>
         <th><span class="error"> </span></th>
