--- a/T2/static/css/style.css
+++ b/T2/static/css/style.css
@@ -4,7 +4,8 @@
 
 /* Style the content */
 .content {
-  margin-left: 200px;
+  margin-left: 15%;
+  margin-right: 15%;
   padding-left: 20px;
 }
 /*Index page*/
