Add campos na promocao

--- a/T2/templates/login.html
+++ b/T2/templates/login.html
@@ -22,7 +22,7 @@
       </tr>
       <tr>
         <th></th>
-        <th style="text-align:right"><button class="btn"><input type="submit" value="Entrar"></button></th>
+        <th style="text-align:right"><button class="btn"><input type="submit" value="Entrar" onclick="return verifyLogin()"></button></th>
           
         </th>
       </tr>
