--- a/T2/templates/nova-promocao.html
+++ b/T2/templates/nova-promocao.html
@@ -19,6 +19,16 @@
     <td><span class="error">* <?php echo $cidadeErr;?></span></td>
   </tr>
   <tr>
+    <td>Preço à vista</td>
+    <td><input type="text" name="avista"></td>
+    <td><span class="error">* <?php echo $cidadeErr;?></span></td>
+  </tr>
+  <tr>
+    <td>Preço parcelado</td>
+    <td><input type="text" name="parcelado"></td>
+    <td><span class="error">* <?php echo $cidadeErr;?></span></td>
+  </tr>
+  <tr>
     <td>Início:</td>
     <td><input type="date" name="inicio"></td>
     <td><span class="error">* <?php echo $inicioErr;?></span></td>
