--- a/T2/templates/base_index.html
+++ b/T2/templates/base_index.html
@@ -14,6 +14,7 @@
     <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/album/">
     <link rel="stylesheet" href="{{ url_for('static', filename= 'css/style.css') }}">
     <script src="{{ url_for('static', filename= 'js/Cartoes.js') }}" defer></script>
+    <script src="{{ url_for('static', filename= 'js/validation.js') }}" defer></script>
     
     <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
