--- a/T2/templates/base_login.html
+++ b/T2/templates/base_login.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="{{ url_for('static', filename= 'css/style.css') }}">
   <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/album/">
+  <script src="{{ url_for('static', filename= 'js/validation.js') }}" defer></script>
   <title>{% block title %} DiFerias {% endblock %}</title>
 </head>
 
