add url_img e website

--- a/T2/templates/login.html
+++ b/T2/templates/login.html
@@ -8,14 +8,14 @@
     <table>
       <tr>
         <th><label>Login: </label></th>
-        <th><input type="text" name="login" width="100%"></th>
+        <th><input type="text" name="login" id="login" value="" width="100%"></th>
       </tr>
       <tr>
         <th><span class="error"> </span></th>
       </tr>
       <tr>
         <th><label>Senha: </label></th>
-        <th><input type="password" name="password" width="100%"></th>
+        <th><input type="password" name="password" id="password" value="" width="100%"></th>
       </tr>
       <tr>
         <th><span class="error"> </span></th>
@@ -28,7 +28,6 @@
       </tr>
     </table>
   </form>
-  <h5>{{ success }}</h5>
 </div>
 
 
