--- a/T2/templates/nova-promocao.html
+++ b/T2/templates/nova-promocao.html
@@ -39,6 +39,16 @@
     <td><span class="error">* <?php echo $fimErr;?></span></td>
   </tr>
   <tr>
+    <td>Website</td>
+    <td><input type="text" name="website"></td>
+    <td><span class="error">* <?php echo $cidadeErr;?></span></td>
+  </tr>
+  <tr>
+    <td>Url da imagem</td>
+    <td><input type="text" name="url_img"></td>
+    <td><span class="error">* <?php echo $cidadeErr;?></span></td>
+  </tr>
+  <tr>
     <td>Descrição:</td>
     <td><textarea name="descricao" rows="4" cols="50"> </textarea></td>
   </tr>
