--- a/T2/templates/base_login.html
+++ b/T2/templates/base_login.html
@@ -1,64 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="{{ url_for('static', filename= 'css/style.css') }}">
-  <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/album/">
-  <script src="{{ url_for('static', filename= 'js/validation.js') }}" defer></script>
-  <title>{% block title %} DiFerias {% endblock %}</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+
+    <link rel="stylesheet" href="{{ url_for('static', filename= 'css/style.css') }}">
+
+
+    <title>{% block title %} DiFerias {% endblock %}</title>
 </head>
-
 <body>
-
-  <link href="../static/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    .bd-placeholder-img {
-      font-size: 1.125rem;
-      text-anchor: middle;
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      user-select: none;
-    }
-
-    @media (min-width: 768px) {
-      .bd-placeholder-img-lg {
-        font-size: 3.5rem;
-      }
-    }
-  </style>
-
-  <div class="header navbar navbar-dark bg-dark shadow-sm">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="{{ url_for ('index')}}">
-        <img src="{{url_for('static', filename='img/logo01.png')}}" style="height:180px;">
-      </a>
+    <div class="header">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="{{ url_for ('index')}}">
+             <img src="{{url_for('static', filename='img/logo01.png')}}" style="height:90px; ">
+            </a>
+        </div>
     </div>
-  </div>
-
-  <div class="sidenav">
-
-
-    <!--<div class="menu">
-      <a href="{{url_for('home')}}">Home</a>
-      {% if session['role'] == "admin"%}
-      <a href="{{url_for('hoteis')}}">Hotéis</a>
-      <a href="{{url_for('sites')}}">Sites de Reserva</a>
-      {%endif%}
-      {% if session['role'] == "hotel" or session['role'] == "site"%}
-      <a href="{{url_for('novapromocao')}}">Cadastrar promoção</a>
-      {%endif%}
-
-      <a href="{{url_for('logout')}}">Sair</a>
-    </div>-->
-
-  {% block content %} {% endblock %}
-
-  <div class="footer bg-dark">
-    <img src="{{ url_for('static', filename= 'img/logo02.png') }}" height=90 style="margin-top:-45px;">
-  </div>
+    
+    {% block content %} {% endblock %}
+    
+    <div class="footer">
+        <img src="{{ url_for('static', filename= 'img/logo02.png') }}" height=90 style="margin-top:-45px;">
+    </div>
 </body>
-
 </html>
