--- a/T2/templates/index.html
+++ b/T2/templates/index.html
@@ -36,70 +36,74 @@
             <img src="{{url_for('static', filename='img/pousada-santa-rita.jpg')}}" class="bd-placeholder-img card-img-top" width="100%" height="225" preserveAspectRatio="xMidYMid slice" focusable="false"/>
             <div class="card-body">
               <h5 class="card-title"><b>Pousada Santa Rita</b></h5>
-              <p class="card-text">15/05/2021 a 15/06/2021</p>
+              <p class="intervalo card-text">15/05/2021 a 15/06/2021</p> 
+              <p hidden class = "cidades"> "Ribeirão Preto"</p>
               <br>
               <p class="data card-text">Diárias</p>
-                <p>A vista - R$ 209,90 </p>
-                <p>Parcelado - R$ 229,90 </p>
+              <p>A vista - R$ 209,90 </p>
+              <p>Parcelado - R$ 229,90 </p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <a href="https://www.hurb.com/br/hotels/ribeirao-preto/pousada-santa-rita-JNP-JP626275?cmp=396312&prm=515&gclid=Cj0KCQjwwLKFBhDPARIsAPzPi-KhbV1YgtLvjiCJYKuYArYerkEQEPSG9-6WP-5KGDlpNu31r6P2YgwaAtaaEALw_wcB/">
                     <button type="button" class="btn btn-sm btn-outline-secondary">Acessar Site</button></a>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
-        </div>
-        <div class="col">
-          <div class="card shadow-sm cards__item text-center" id = "hotel3">
-            <img src="{{url_for('static', filename='img/Pousada-Maresias.jpg')}}" class="bd-placeholder-img card-img-top" width="100%" height="225" preserveAspectRatio="xMidYMid slice" focusable="false"/>
-            <div class="card-body">
-              <h5 class="card-title"><b>Pousada Maresias</b></h5>
-              <p class="card-text">21/05/2021 a 23/05/2021</p>
-              <br>
-              <p class="data card-text">Diárias</p>
+          <div class="col">
+            <div class="card shadow-sm cards__item text-center" id = "hotel3">
+              <img src="{{url_for('static', filename='img/Pousada-Maresias.jpg')}}" class="bd-placeholder-img card-img-top" width="100%" height="225" preserveAspectRatio="xMidYMid slice" focusable="false"/>
+              <div class="card-body">
+                <h5 class="card-title"><b>Pousada Maresias</b></h5>
+                <p class="intervalo card-text">21/05/2021 a 23/05/2021</p>
+                <p hidden class = "cidades"> "Serra Negra"</p>
+                <br>
+                <p class="data card-text">Diárias</p>
                 <p>A vista - R$ 209,90 </p>
                 <p>Parcelado - R$ 229,90 </p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <a href="https://www.maresiasbeiramar.com.br/">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Acessar Site</button></a>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="https://www.maresiasbeiramar.com.br/">
+                      <button type="button" class="btn btn-sm btn-outline-secondary">Acessar Site</button></a>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card shadow-sm cards__item text-center" id = "hotel3">
-            <img src="{{url_for('static', filename='img/pousada-caicara.jpg')}}" class="bd-placeholder-img card-img-top" width="100%" height="225" preserveAspectRatio="xMidYMid slice" focusable="false"/>
-            <div class="card-body">
-              <h5 class="card-title"><b>Pousada Caicara</b></h5>
-              <p class="card-text">29/05/2021 a 05/07/2021</p>
-              <br>
-              <p class="data card-text">Diárias</p>
-                <p>A vista - R$ 209,90 </p>
-                <p>Parcelado - R$ 229,90 </p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <a href="http://www.caicarapousada.com.br/">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Acessar Site</button></a>
+            <div class="col">
+              <div class="card shadow-sm cards__item text-center" id = "hotel3">
+                <img src="{{url_for('static', filename='img/pousada-caicara.jpg')}}" class="bd-placeholder-img card-img-top" width="100%" height="225" preserveAspectRatio="xMidYMid slice" focusable="false"/>
+                <div class="card-body">
+                  <h5 class="card-title"><b>Pousada Caicara</b></h5>
+                  <p class="intervalo card-text">29/05/2021 a 05/07/2021</p>
+                  <p hidden class = "cidades"> "Maresias"</p>
+                  <br>
+                  <p class="data card-text">Diárias</p>
+                  <p>A vista - R$ 209,90 </p>
+                  <p>Parcelado - R$ 229,90 </p>
+                  <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">
+                      <a href="http://www.caicarapousada.com.br/">
+                        <button type="button" class="btn btn-sm btn-outline-secondary">Acessar Site</button></a>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col">
-          <div class="card shadow-sm cards__item text-center" id = "hotel3">
-            <img src="{{url_for('static', filename='img/WEB-PousadaVivamar-166-e1567982987303.jpg')}}" class="bd-placeholder-img card-img-top" width="100%" height="225" preserveAspectRatio="xMidYMid slice" focusable="false"/>
-            <div class="card-body">
-              <h5 class="card-title"><b>Pousada Vivamar</b></h5>
-              <p class="card-text">15/07/2021 a 19/07/2021</p>
-              <br>
-              <p class="data card-text">Diárias</p>
-                <p>A vista - R$ 209,90 </p>
-                <p>Parcelado - R$ 229,90 </p>
-              <div class="d-flex justify-content-between align-items-center">
+              
+              <div class="col">
+                <div class="card shadow-sm cards__item text-center" id = "hotel3">
+                  <img src="{{url_for('static', filename='img/WEB-PousadaVivamar-166-e1567982987303.jpg')}}" class="bd-placeholder-img card-img-top" width="100%" height="225" preserveAspectRatio="xMidYMid slice" focusable="false"/>
+                  <div class="card-body">
+                    <h5 class="card-title"><b>Pousada Vivamar</b></h5>
+                    <p class="intervalo card-text">15/07/2021 a 19/07/2021</p>
+                    <p hidden class = "cidades"> "Ilha Grande"</p>
+                    <br>
+                    <p class="data card-text">Diárias</p>
+                    <p>A vista - R$ 209,90 </p>
+                    <p>Parcelado - R$ 229,90 </p>
+                    <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <a href="https://pousadavivamar.com.br/">
                     <button type="button" class="btn btn-sm btn-outline-secondary">Acessar Site</button></a>
@@ -113,7 +117,8 @@
             <img src="{{url_for('static', filename='img/78530860.jpg')}}" class="bd-placeholder-img card-img-top" width="100%" height="225" preserveAspectRatio="xMidYMid slice" focusable="false"/>
             <div class="card-body">
               <h5 class="card-title"><b>Pousada Shangrila</b></h5>
-              <p class="card-text">02/06/2021 a 17/06/2021</p>
+              <p class="intervalo card-text">02/06/2021 a 17/06/2021</p>
+              <p hidden class = "cidades"> "Ubatuba"</p>
               <br>
               <p class="data card-text text-center">Diárias</p>
                 <p>A vista - R$ 209,90 </p>
@@ -127,6 +132,30 @@
             </div>
           </div>
         </div>
+        {%for promocao in promocao%}
+        {%set data1 = promocao.inicio.split('-')[2] + '/' + promocao.inicio.split('-')[1] + '/' + promocao.inicio.split('-')[0] %}
+        {%set data2 = promocao.fim.split('-')[2] + '/' + promocao.fim.split('-')[1] + '/' + promocao.fim.split('-')[0] %}
+        <div class="col">
+          <div class="card shadow-sm cards__item text-center" id = "hotel3">
+            <img src= {{promocao.url_img}} class="bd-placeholder-img card-img-top" width="100%" height="225" preserveAspectRatio="xMidYMid slice" focusable="false"/>
+            <div class="card-body">
+              <h5 class="card-title"><b>{{promocao.nome}}</b></h5>
+              <p class="intervalo card-text">{{data1}} a {{data2}}</p>
+              <p hidden class = "cidades"> {{promocao.cidade}}</p>
+              <br>
+              <p class="data card-text text-center">Diárias</p>
+                <p>A vista - R$ {{promocao.avista}} </p>
+                <p>Parcelado - R$ {{promocao.parcelado}} </p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <a href={{promocao.website}}>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Acessar Site</button></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        {%endfor%}
       </div>
     </div>
   </div>
