--- a/T2/templates/novo-hotel.html
+++ b/T2/templates/novo-hotel.html
@@ -12,27 +12,27 @@
   <tr>
     <td>CNPJ:</td>
     <td><input type="text" name="cnpj"></td>
-    <td><span class="error">* <?php echo $cnpjErr;?></span></td>
+    <td><span class="error">* {{error['cnpj']}}</span></td>
   </tr> 
   <tr>
     <td>Nome:</td>
     <td><input type="text" name="nome"></td>
-    <td><span class="error">* <?php echo $nomeErr;?></span></td>
+    <td><span class="error">* {{error['nome']}}</span></td>
   </tr>
   <tr>
     <td>Cidade:</td>
     <td><input type="text" name="cidade"></td>
-    <td><span class="error">* <?php echo $cidadeErr;?></span></td>
+    <td><span class="error">* {{error['cidade']}}</span></td>
   </tr> 
   <tr>
     <td>Email:</td>
     <td><input type="text" name="email"></td>
-    <td><span class="error">* <?php echo $emailErr;?></span></td>
+    <td><span class="error">* {{error['email']}}</span></td>
   </tr>
   <tr>
     <td>Senha:</td>
     <td><input type="password" name="senha"></td>
-    <td><span class="error">* <?php echo $senhaErr;?></span></td>
+    <td><span class="error">* {{error['senha']}}</span></td>
   </tr>
   <tr>
     <td><input type="submit" value="Criar" ></td>
