--- a/T2/templates/hoteis.html
+++ b/T2/templates/hoteis.html
@@ -4,7 +4,7 @@
 {% block content %}  
 
   <div class="content">
-    <h2>Hotéis</h2>
+    <h2 class="table-header">Hotéis</h2>
     <button id="admin-button">
       <a href="{{url_for('novohotel')}}">Cadastrar Hotel</a>
     </button>
