--- a/T2/static/css/style.css
+++ b/T2/static/css/style.css
@@ -150,8 +150,10 @@
 /* login boxes*/
 .login_geral {
   width: fit-content;
+  width: -moz-fit-content;
   padding: 10px;
   height: fit-content;
+  height: -moz-fit-content;
   margin: 10px;
   position:relative;
   background-color: #84e45d;
@@ -176,6 +178,7 @@
   padding-top: 10px;
   border-radius: 8px;
   margin-top: 20px;
+  margin-right: 10px;
   padding: 10px 10px;
   float: right;
   border: 0px;
@@ -243,6 +246,14 @@
   width: fit-content;
   padding: 10px;
   box-shadow: 1px 2px #cfcfcf;
+}
+
+.gv {
+  margin-left:20%;
+}
+
+.table-header{
+  margin-left:20%;
 }
 
 /* Gridview */
