--- a/T2/templates/base_login.html
+++ b/T2/templates/base_login.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
+    <script src="{{ url_for('static', filename= 'js/validation.js') }}" defer></script>
 
     <link rel="stylesheet" href="{{ url_for('static', filename= 'css/style.css') }}">
 
