--- a/T2/templates/sites-reserva.html
+++ b/T2/templates/sites-reserva.html
@@ -3,7 +3,7 @@
 {% block content %}   
 
 <div class="content">
-  <h2>Sites de Reservas</h2>
+  <h2 class="table-header">Sites de Reservas</h2>
  
   <button id="admin-button">
     <a href="{{url_for('novosite')}}">Cadastrar Site de Reservas</a>
