--- a/T2/static/css/style.css
+++ b/T2/static/css/style.css
@@ -2,13 +2,18 @@
   box-sizing: border-box;
 }
 
-/* Style the content */
 .content {
   margin-left: 15%;
   margin-right: 15%;
   padding-left: 20px;
 }
-/*Index page*/
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #f8f6f1;
+  margin: 0;
+}
+
 
 /*buttons*/
 #login-button {
@@ -24,151 +29,7 @@
   text-decoration: none;
   display: block;
 }
-/*end buttons*/
 
-
-
-.filter_item {
-  margin-left:30px;
-}
-
-.filter_date
-{
-  height: 25px;
-}
-/* End of filter parameters*/
-
-/*index boxes*/
-
-/*.cards {
-    display: flex;
-    /* Put a card in the next row when previous cards take all width
-    flex-wrap: wrap;
-    margin-left: -8px;
-    margin-right: -8px;
-}*/
-
-/* .cards__item {
-  padding-left: 8px;
-  padding-right: 8px;
-  margin: 20px;
-  padding: 10px;
-  border-radius: 8px;
-  height: fit-content;
-  width: fit-content;
-  padding: 10px;
-  box-shadow: 1px 2px #cfcfcf;
-  background-color:#f0c49b;
-} */
-/*end of index boxes*/
-
-/* index inside box */
-.hotel{
-  border-radius: 20%;
-  width: 400px;
-  height: 250px;
-}
-
-.tab-2itens{
-  width: 400px;
-}
-
-.tab2{
-  float: left;
-  width: 160px;
-  margin: 20px;
-  margin-top: 0px;
-  background-color: rgb(224, 224, 183);
-  border-radius: 8px;
-  text-align: center;
-}
-
-.data{
-  width: fit-content;
-  padding: 10px;
-  font-size:large;
-  background-color: rgb(224, 224, 183);
-  text-align: center;
-  border-radius: 8px;
-  align-self: center;
-}
-/* end of index inside box*/
-/* end of index */
-
-/* Menun */
-.menu {
-  height: 100%;
-  margin-top:150px;
-  width: 200px;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: #c9c9c9;
-  overflow-x: hidden;
-}
-
-/* Side navigation links */
-.menu a {
-  color: black;
-  padding: 16px;
-  text-decoration: none;
-  display: block;
-}
-
-/* Change color on hover */
-.menu a:hover {
-  background-color: #84e45d;
-  color: black;
-}
-
-@media screen and (max-width: 700px) {
-  .menu {
-    width: 100%;
-    height: auto;
-    position: relative;
-    margin-top:-50px;
-    
-  }
-  .menu a {float: left;}
-  div.content {margin-left: 0;}
-}
-
-@media screen and (max-width: 400px) {
-  .menu {
-    width: 100%;
-    height: auto;
-    position: relative;
-  }
-  .menu a {
-    text-align: center;
-    float: none;
-  }
-
-}
-
-/* login boxes*/
-.login_geral {
-  width: fit-content;
-  width: -moz-fit-content;
-  padding: 10px;
-  height: fit-content;
-  height: -moz-fit-content;
-  margin: 10px;
-  position:relative;
-  background-color: #84e45d;
-  border-radius: 20px;
-  border: 2px solid #84e45d;
-}
-
-.error{
-  color: red;
-  font-size: 12;
-  text-align: center;
-}
-/*end of login boxes*/
-
-/* Admin button */
 #admin-button {
   position:sticky;
   top: 150px;
@@ -192,8 +53,93 @@
   text-decoration: none;
   display: block;
 }
+/*end buttons*/
 
-/* Header */
+
+/*Filter parameters*/
+.filter_item {
+  margin-left:30px;
+}
+
+.filter_date
+{
+  height: 25px;
+}
+/*End of filter parameters*/
+
+.data{
+  width: fit-content;
+  padding: 10px;
+  font-size:large;
+  background-color: rgb(224, 224, 183);
+  text-align: center;
+  border-radius: 8px;
+  align-self: center;
+}
+
+
+/* Menun */
+.menu {
+  height: 100%;
+  margin-top:150px;
+  width: 200px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #c9c9c9;
+  overflow-x: hidden;
+}
+
+.menu a {
+  color: black;
+  padding: 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.menu a:hover {
+  background-color: #84e45d;
+  color: black;
+}
+
+@media screen and (max-width: 700px) {
+  .menu {
+    width: 100%;
+    height: auto;
+    position: relative;
+    margin-top:-50px;
+    
+  }
+  .menu a {float: left;}
+  
+  .gv {
+    float: left;
+    margin-left: -90px;}
+    
+}
+
+
+/*Login*/
+.login_geral {
+  width: fit-content;
+  width: -moz-fit-content;
+  padding: 10px;
+  height: fit-content;
+  height: -moz-fit-content;
+  margin: 10px;
+  position:relative;
+  background-color: #84e45d;
+  border-radius: 20px;
+  border: 2px solid #84e45d;
+}
+
+.error{
+  color: red;
+  font-size: 12;
+  text-align: center;
+}
+
 .header {
   background-color: #212529;
   text-align: center;
@@ -201,17 +147,6 @@
   position: static;
   padding: 25px;
   vertical-align: middle;
-}
-
-@media screen and (max-width: 500px) {
-  .header a {
-    float: none;
-    display: block;
-  }
-  .header-right {
-    float: none;
-  }
-
 }
 
 .navbar-header {
@@ -226,7 +161,6 @@
   margin-right: 1rem;
 }
 
-/* Footer */
 .footer{
   bottom: 0px;
   margin-bottom: 0px;
@@ -235,21 +169,9 @@
   background-color: #212529;
 }
 
-.card_home {
-  padding-left: 8px;
-  padding-right: 8px;
-  margin-left: 250px;
-  margin-top: 20px;
-  padding: 10px;
-  border-radius: 8px;
-  height: fit-content;
-  width: fit-content;
-  padding: 10px;
-  box-shadow: 1px 2px #cfcfcf;
-}
-
+/*Tables*/
 .gv {
-  margin-left:20%;
+  overflow-x:auto;
 }
 
 .table-header{
@@ -269,12 +191,4 @@
 
 .gv tr:nth-child(even) {
   background-color: #d4ebcb;
-}
-/*End of gridview*/
-
-
-body {
-  font-family: Arial, Helvetica, sans-serif;
-  background-color: #f8f6f1;
-  margin: 0;
 }
