manutencao dos forms ao errar

--- a/T2/templates/base.html
+++ b/T2/templates/base.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="{{ url_for('static', filename= 'css/style.css') }}">
   <script src="{{ url_for('static', filename= 'js/validation.js') }}" defer></script>
+  <script src="{{ url_for('static', filename= 'js/Keep_form.js') }}" defer></script>
   <title>{% block title %}DiFerias{% endblock %}</title>
 
   <div class="header">
