--- a/T2/templates/novo-hotel.html
+++ b/T2/templates/novo-hotel.html
@@ -1,42 +1,46 @@
 {% extends 'base.html' %}
 
 
-    {% block content %}
+{% block content %}
 
-
-<div class="content">
+<div class="content" >
   <h2>Cadastrar hotel</h2>
   <table>
-  <form action="{{url_for('novohotel')}}" method="POST">
-  <tr>
-    <td>CNPJ:</td>
-    <td><input type="text" name="cnpj"></td>
-    <td><span class="error">* <?php echo $cnpjErr;?></span></td>
-  </tr> 
-  <tr>
-    <td>Nome:</td>
-    <td><input type="text" name="nome"></td>
-    <td><span class="error">* <?php echo $nomeErr;?></span></td>
-  </tr>
-  <tr>
-    <td>Cidade:</td>
-    <td><input type="text" name="cidade"></td>
-    <td><span class="error">* <?php echo $cidadeErr;?></span></td>
-  </tr> 
-  <tr>
-    <td>Email:</td>
-    <td><input type="text" name="email"></td>
-    <td><span class="error">* <?php echo $emailErr;?></span></td>
-  </tr>
-  <tr>
-    <td>Senha:</td>
-    <td><input type="password" name="senha"></td>
-    <td><span class="error">* <?php echo $senhaErr;?></span></td>
-  </tr>
-  <tr>
-    <td><input type="submit" value="Criar" ></td>
-  </tr>
-  </form>
+    <form action="{{url_for('novohotel')}}" method="POST">
+      <tr>
+        <td>CNPJ:</td>
+        <td><input type="text" name="cnpj" class = "keep_form"></td>
+        <td><span class="error">* {{error['cnpj']}}</span></td>
+        <p hidden class="keep">{{cnpj}}</p>
+      </tr> 
+      <tr>
+        <td>Nome:</td>
+        <td><input type="text" name="nome" class = "keep_form"></td>
+        <td><span class="error">* {{error['nome']}}</span></td>
+        <p hidden class="keep">{{nome}}</p>
+      </tr>
+      <tr>
+        <td>Cidade:</td>
+        <td><input type="text" name="cidade" class = "keep_form"></td>
+        <td><span class="error">* {{error['cidade']}}</span></td>
+        <p hidden class="keep">{{cidade}}</p>
+      </tr> 
+      <tr>
+        <td>Email:</td>
+        <td><input type="text" name="email" class = "keep_form"></td>
+        <td><span class="error">* {{error['email']}}</span></td>
+        <p hidden class="keep">{{email}}</p>
+      </tr>
+      <tr>
+        <td>Senha:</td>
+        <td><input type="password" name="senha" class = "keep_form"></td>
+        <td><span class="error">* {{error['senha']}}</span></td>
+        <p hidden class="keep">{{senha}}</p>
+      </tr>
+      <tr>
+        <td><input type="submit" value="Criar" ></td>
+      </tr>
+    </form>
   </table>
 </div>
 {% endblock %}
