--- a/T2/static/css/style.css
+++ b/T2/static/css/style.css
@@ -2,13 +2,18 @@
   box-sizing: border-box;
 }
 
-/* Style the content */
 .content {
   margin-left: 15%;
   margin-right: 15%;
   padding-left: 20px;
 }
-/*Index page*/
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #f8f6f1;
+  margin: 0;
+}
+
 
 /*buttons*/
 #login-button {
@@ -24,10 +29,34 @@
   text-decoration: none;
   display: block;
 }
+
+#admin-button {
+  position:sticky;
+  top: 150px;
+  background-color: #84e45d;
+  right: 120px;
+  text-align: center;
+  padding-top: 10px;
+  border-radius: 8px;
+  margin-top: 20px;
+  margin-right: 10px;
+  padding: 10px 10px;
+  float: right;
+  border: 0px;
+  font-size: 15px;
+  font-weight: bold;
+
+}
+
+#admin-button a {
+  color: white;
+  text-decoration: none;
+  display: block;
+}
 /*end buttons*/
 
 
-
+/*Filter parameters*/
 .filter_item {
   margin-left:30px;
 }
@@ -36,52 +65,7 @@
 {
   height: 25px;
 }
-/* End of filter parameters*/
-
-/*index boxes*/
-
-/*.cards {
-    display: flex;
-    /* Put a card in the next row when previous cards take all width
-    flex-wrap: wrap;
-    margin-left: -8px;
-    margin-right: -8px;
-}*/
-
-/* .cards__item {
-  padding-left: 8px;
-  padding-right: 8px;
-  margin: 20px;
-  padding: 10px;
-  border-radius: 8px;
-  height: fit-content;
-  width: fit-content;
-  padding: 10px;
-  box-shadow: 1px 2px #cfcfcf;
-  background-color:#f0c49b;
-} */
-/*end of index boxes*/
-
-/* index inside box */
-.hotel{
-  border-radius: 20%;
-  width: 400px;
-  height: 250px;
-}
-
-.tab-2itens{
-  width: 400px;
-}
-
-.tab2{
-  float: left;
-  width: 160px;
-  margin: 20px;
-  margin-top: 0px;
-  background-color: rgb(224, 224, 183);
-  border-radius: 8px;
-  text-align: center;
-}
+/*End of filter parameters*/
 
 .data{
   width: fit-content;
@@ -92,8 +76,7 @@
   border-radius: 8px;
   align-self: center;
 }
-/* end of index inside box*/
-/* end of index */
+
 
 /* Menun */
 .menu {
@@ -108,7 +91,6 @@
   overflow-x: hidden;
 }
 
-/* Side navigation links */
 .menu a {
   color: black;
   padding: 16px;
@@ -116,7 +98,6 @@
   display: block;
 }
 
-/* Change color on hover */
 .menu a:hover {
   background-color: #84e45d;
   color: black;
@@ -131,27 +112,21 @@
     
   }
   .menu a {float: left;}
-  div.content {margin-left: 0;}
+  
+  .gv {
+    float: left;
+    margin-left: -90px;}
+    
 }
 
-@media screen and (max-width: 400px) {
-  .menu {
-    width: 100%;
-    height: auto;
-    position: relative;
-  }
-  .menu a {
-    text-align: center;
-    float: none;
-  }
 
-}
-
-/* login boxes*/
+/*Login*/
 .login_geral {
   width: fit-content;
+  width: -moz-fit-content;
   padding: 10px;
   height: fit-content;
+  height: -moz-fit-content;
   margin: 10px;
   position:relative;
   background-color: #84e45d;
@@ -164,33 +139,7 @@
   font-size: 12;
   text-align: center;
 }
-/*end of login boxes*/
 
-/* Admin button */
-#admin-button {
-  position:sticky;
-  top: 150px;
-  background-color: #84e45d;
-  right: 120px;
-  text-align: center;
-  padding-top: 10px;
-  border-radius: 8px;
-  margin-top: 20px;
-  padding: 10px 10px;
-  float: right;
-  border: 0px;
-  font-size: 15px;
-  font-weight: bold;
-
-}
-
-#admin-button a {
-  color: white;
-  text-decoration: none;
-  display: block;
-}
-
-/* Header */
 .header {
   background-color: #212529;
   text-align: center;
@@ -198,17 +147,6 @@
   position: static;
   padding: 25px;
   vertical-align: middle;
-}
-
-@media screen and (max-width: 500px) {
-  .header a {
-    float: none;
-    display: block;
-  }
-  .header-right {
-    float: none;
-  }
-
 }
 
 .navbar-header {
@@ -223,7 +161,6 @@
   margin-right: 1rem;
 }
 
-/* Footer */
 .footer{
   bottom: 0px;
   margin-bottom: 0px;
@@ -232,17 +169,13 @@
   background-color: #212529;
 }
 
-.card_home {
-  padding-left: 8px;
-  padding-right: 8px;
-  margin-left: 250px;
-  margin-top: 20px;
-  padding: 10px;
-  border-radius: 8px;
-  height: fit-content;
-  width: fit-content;
-  padding: 10px;
-  box-shadow: 1px 2px #cfcfcf;
+/*Tables*/
+.gv {
+  overflow-x:auto;
+}
+
+.table-header{
+  margin-left:20%;
 }
 
 /* Gridview */
@@ -258,12 +191,4 @@
 
 .gv tr:nth-child(even) {
   background-color: #d4ebcb;
-}
-/*End of gridview*/
-
-
-body {
-  font-family: Arial, Helvetica, sans-serif;
-  background-color: #f8f6f1;
-  margin: 0;
 }
