--- a/T2/templates/nova-promocao.html
+++ b/T2/templates/nova-promocao.html
@@ -1,7 +1,6 @@
 {% extends 'base.html' %}
 
-{% block content %}   
-<h1>{% block title %} DiFerias {% endblock %}</h1>
+{% block content %} 
 
 
 <div class="content">
@@ -11,46 +10,56 @@
   <tr>
     <td>Nome:</td>
     <td><input type="text" name="nome"></td>
-    <td><span class="error">* <?php echo $nomeErr;?></span></td>
+    <td><span class="error">* {{error['nome']}}</span></td>
+    <p hidden class="keep">{{cnpj}}</p>
   </tr> 
   <tr>
     <td>Cidade:</td>
     <td><input type="text" name="cidade"></td>
-    <td><span class="error">* <?php echo $cidadeErr;?></span></td>
+    <td><span class="error">* {{error['cidade']}}</span></td>
+    <p hidden class="keep">{{cnpj}}</p>
   </tr>
   <tr>
     <td>Preço à vista</td>
     <td><input type="text" name="avista"></td>
-    <td><span class="error">* <?php echo $cidadeErr;?></span></td>
+    <td><span class="error">* {{error['avista']}}</span></td>
+    <p hidden class="keep">{{cnpj}}</p>
   </tr>
   <tr>
     <td>Preço parcelado</td>
     <td><input type="text" name="parcelado"></td>
-    <td><span class="error">* <?php echo $cidadeErr;?></span></td>
+    <td><span class="error">* {{error['parcelado']}}</span></td>
+    <p hidden class="keep">{{cnpj}}</p>
   </tr>
   <tr>
     <td>Início:</td>
     <td><input type="date" name="inicio"></td>
-    <td><span class="error">* <?php echo $inicioErr;?></span></td>
+    <td><span class="error">* {{error['inicio']}}</span></td>
+    <p hidden class="keep">{{cnpj}}</p>
   </tr> 
   <tr>
     <td>Fim:</td>
     <td><input type="date" name="fim"></td>
-    <td><span class="error">* <?php echo $fimErr;?></span></td>
+    <td><span class="error">* {{error['fim']}}</span></td>
+    <p hidden class="keep">{{cnpj}}</p>
   </tr>
   <tr>
     <td>Website</td>
     <td><input type="text" name="website"></td>
-    <td><span class="error">* <?php echo $cidadeErr;?></span></td>
+    <td><span class="error">* {{error['website']}}</span></td>
+    <p hidden class="keep">{{cnpj}}</p>
   </tr>
   <tr>
     <td>Url da imagem</td>
     <td><input type="text" name="url_img"></td>
-    <td><span class="error">* <?php echo $cidadeErr;?></span></td>
+    <td><span class="error">* {{error['url_img']}}</span></td>
+    <p hidden class="keep">{{cnpj}}</p>
   </tr>
   <tr>
     <td>Descrição:</td>
     <td><textarea name="descricao" rows="4" cols="50"> </textarea></td>
+    <td><span class="error">* {{error['descricao']}}</span></td>
+    <p hidden class="keep">{{cnpj}}</p>
   </tr>
   <tr>
     <td><input type="submit" value="Criar" ></td>
