--- a/T2/templates/novo-sitereserva.html
+++ b/T2/templates/novo-sitereserva.html
@@ -10,27 +10,32 @@
   <tr>
     <td>Website:</td>
     <td><input type="text" name="website"></td>
-    <td><span class="error">* <?php echo $websiteErr;?></span></td>
+    <td><span class="error">* {{error['website']}}</span></td>
+    <p hidden class="keep">{{website}}</p>
   </tr> 
   <tr>
     <td>Nome:</td>
     <td><input type="text" name="nome"></td>
-    <td><span class="error">* <?php echo $nomeErr;?></span></td>
+    <td><span class="error">* {{error['nome']}}</span></td>
+    <p hidden class="keep">{{nome}}</p>
   </tr>
   <tr>
     <td>Cidade:</td>
     <td><input type="text" name="cidade"></td>
-    <td><span class="error">* <?php echo $cidadeErr;?></span></td>
+    <td><span class="error">* {{error['cidade']}}</span></td>
+    <p hidden class="keep">{{cidade}}</p>
   </tr> 
   <tr>
     <td>Email:</td>
     <td><input type="text" name="email"></td>
-    <td><span class="error">* <?php echo $emailErr;?></span></td>
+    <td><span class="error">* {{error['email']}}</span></td>
+    <p hidden class="keep">{{email}}</p>
   </tr>
   <tr>
     <td>Senha:</td>
     <td><input type="password" name="senha"></td>
-    <td><span class="error">* <?php echo $senhaErr;?></span></td>
+    <td><span class="error">* {{error['senha']}}</span></td>
+    <p hidden class="keep">{{senha}}</p>
   </tr>
   <tr>
     <td><input type="submit" value="Criar" ></td>
